--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "idol_slime",
   "version": "1.0.0",
   "description": "1. install package",
-  "main": "event.js",
+  "main": "server.js",
   "dependencies": {
-    "http-server": "^0.11.1",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongodb": "^3.0.10",
     "paper": "^0.11.5"
   },
   "devDependencies": {},
